# comp_evaluator

./: .env  .env.example  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  models.py  utils.py
app/adapters/: __init__.py  grok.py  news.py  sec.py  website.py
app/services/: evaluation.py  relevance.py  rendering.py  scoring.py
app/static/: app.js  styles.css
app/templates/: index.html
investment_evaluator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_service.py
