[project]
name = "investment-evaluator"
version = "0.1.0"
description = "FastAPI service that generates company investment evaluation reports using public data and Grok."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.12",
  "feedparser>=6.0.11",
  "httpx>=0.28.1",
  "markdown>=3.8",
  "openai>=1.79.0",
  "pydantic-settings>=2.9.1",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
